# teste-vr-software

./: Makefile  README.md  pyproject.toml
src/: main.py
src/notification/: entity.py  enum.py  exception.py  repository.py  router.py  schema.py  service.py  usecase.py
src/settings/broker/: __init__.py  broker_settings.py
src/settings/server/: __init__.py  api.py  api_settings.py
tests/: conftest.py
tests/notification/: test_usecase.py
